# modtool

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2d0b3ad  PKGBUILD  README.md  backend.cpp  backend.h  completewidget.cpp  completewidget.h  completewidget.ui  downloadpage.cpp  downloadpage.h  downloadpage.ui  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  startpage.h  startpage.ui
assets/: ModTool.appinstaller  install_desktop.cmake  logo.icns  modtool.desktop  win11_dark.qss  win11_light.qss
